--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Travel-App",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/image/account.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
